Fix: bottom margin is too large when browser is less tall

--- a/web/wp-content/themes/lf-theme/source/scss/blocks/_tab-container.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/blocks/_tab-container.scss
@@ -126,7 +126,7 @@ ul.tab-container-nav {
     }
 
     .sticky-nav-scroller {
-        height: calc(100vh - 50px - 40px);
+        height: calc(100vh - 50px - 20px);
         overflow-y: scroll;
     }
 }
